--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -112,22 +112,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e9822570",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a,b,c  -- relationship\n",
-    "a>b and a>c:\n",
-    "    a\n",
-    "b>a and b>c:\n",
-    "    b\n",
-    "c\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "id": "5df79a00",
    "metadata": {},
@@ -493,23 +477,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a42c0cab",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "ab\n",
+      "bc\n",
+      "cd\n",
+      "ab\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "3 2\n",
-    "1 5 3\n",
-    "3 1\n",
-    "5 7"
+    "# add elements to a CDT in loop and count the non-duplicate values\n",
+    "N = int(input())\n",
+    "A = set()\n",
+    "for i in range(N):\n",
+    "    A.add(input())\n",
+    "print(len(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "9dbc3549",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "1 2 3 4 5 6 7 8 9\n",
+      "12\n",
+      "pop\n",
+      "remove 9\n",
+      "discard 9\n",
+      "discard 8\n",
+      "remove 7\n",
+      "pop\n",
+      "discard 6\n",
+      "remove 5\n",
+      "discard 5\n",
+      "discard 6\n",
+      "discard 8\n",
+      "remove 4\n",
+      "3\n",
+      "{3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set.pop(), set.remove(), set.discard()\n",
+    "from functools import reduce\n",
+    "n = int(input())\n",
+    "s = set()\n",
+    "l = map(int, input().split())\n",
+    "for i in l:\n",
+    "    if len(s)<n:\n",
+    "        if i>=0 and i <=9:\n",
+    "            s.add(i)\n",
+    "N = int(input())\n",
+    "for i in range(N):\n",
+    "    command = input().split()\n",
+    "    if command[0] == 'pop':\n",
+    "        s.pop()\n",
+    "    elif command[0] == 'remove' and int(command[1]) in s:\n",
+    "        s.remove(int(command[1]))\n",
+    "    elif command[0] == 'discard':\n",
+    "        s.discard(int(command[1]))\n",
+    "print(reduce(lambda a,b: a+b, s))  # doesnt work on empty set, hence try sum()\n",
+    "print(sum(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "40d2e6f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 6  8 9 2 0 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{0, 2, 5, 6, 8, 9}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "E = set(map(int, input().split()))\n",
+    "b = int(input())\n",
+    "F = set(map(int, input().split()))\n",
+    "print(len(E.difference(F))) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dbc3549",
+   "id": "6764e279",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -517,15 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "485bf944",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82733658",
+   "id": "739d35d1",
    "metadata": {},
    "outputs": [],
    "source": []
