--- a/Programs - 1.ipynb
+++ b/Programs - 1.ipynb
@@ -295,7 +295,7 @@
     }
    ],
    "source": [
-    "# donot satisfy all test cases bcz of the CPU overload\n",
+    "# doesnot satisfy all test cases bcz of the CPU overload\n",
     "kv = {}\n",
     "st = {}\n",
     "s = 'BANANA'\n",
