--- a/Programs - 3.ipynb
+++ b/Programs - 3.ipynb
@@ -1,21 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "9a24a54f",
+   "cell_type": "markdown",
+   "id": "206bca2e",
    "metadata": {},
    "source": [
-    "HackerRank: Validate email address\n",
+    "#### Validate email address\n",
     "You are given an integer N followed by N email addresses. Your task is to print a list containing only valid email addresses in lexicographical order.\n",
-    "\n",
     "\n",
     "Valid email addresses must follow these rules:\n",
     "\n",
-    "It must have the username@websitename.extension format type.\n",
-    "The username can only contain letters, digits, dashes and underscores [a-z][A-Z][0-9][_-].\n",
-    "The website name can only have letters and digits [a-z][A-Z][0-9].\n",
-    "The extension can only contain letters [a-z][A-Z].\n",
-    "The maximum length of the extension is 3."
+    "    It must have the username@websitename.extension format type.\n",
+    "    The username can only contain letters, digits, dashes and underscores [a-z][A-Z][0-9][_-].\n",
+    "    The website name can only have letters and digits [a-z][A-Z][0-9].\n",
+    "    The extension can only contain letters [a-z][A-Z].\n",
+    "    The maximum length of the extension is 3."
    ]
   },
   {
