--- a/While loop (types of numbers).ipynb
+++ b/While loop (types of numbers).ipynb
@@ -180,6 +180,71 @@
     "Exampe:\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "781ff5d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153\n",
+      "153 is an Armstrong number\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = int(input())\n",
+    "dummy = i\n",
+    "n = len(str(i))\n",
+    "sum_ = 0\n",
+    "while dummy>0:\n",
+    "    rem = dummy%10\n",
+    "    dummy//=10\n",
+    "    sum_+=rem**n\n",
+    "if sum_ == i:\n",
+    "    print(f'{i} is an Armstrong number')\n",
+    "else:\n",
+    "    print(f'{i} is not an Armstrong number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "844455c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1010, 1011, 1100, 1101, 1110, 1111, 10000, 10001, 10010, 10011, 10100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# WAPT convert each number in the given range to its binary representation\n",
+    "def binary_conv(num, pos=1, res=0):\n",
+    "    while num != 0:\n",
+    "        rem = num % 2\n",
+    "        res = res + rem * pos\n",
+    "        pos = pos * 10\n",
+    "        num //= 2\n",
+    "    return res\n",
+    "\n",
+    "print(list(map(binary_conv, range(10, 21))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c49971f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
