--- a/Programs - 2.ipynb
+++ b/Programs - 2.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "16f9a969",
    "metadata": {},
    "outputs": [
@@ -189,14 +189,14 @@
        "[0, 1]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Two Sum\n",
-    "# Problem: Given an array of integers nums and an integer target, return indices of the two numbers such that \n",
+    "# Problem: Given an array of integers say nums and an integer target, return indices of the two numbers such that \n",
     "# they add up to target.\n",
     "\n",
     "def two_sum(nums, target):\n",
@@ -211,32 +211,100 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "558ca303",
+   "cell_type": "markdown",
+   "id": "6f54ae18",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "2. Reverse a String\n",
-    "Problem: Write a function that reverses a string. The input string is given as a list of characters.\n",
-    "\n",
-    "l = ['h', 'e', 'l', 'l', 'o', 'i', 6,4, 7]\n",
-    "for i in range(len(l)//2):\n",
-    "    l[i], l[-(i+1)] = l[-(i+1)], l[i]\n",
-    "l\n",
-    "\n",
-    "# lr = ''\n",
-    "# for i in 'shri':\n",
-    "#     lr=i+lr\n",
-    "# print(lr)"
+    "                    OR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "1f925163",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n"
+     ]
+    }
+   ],
+   "source": [
+    " for i in range(len(a)):\n",
+    "    for j in range(i, len(a)):\n",
+    "        if a[i]+a[j] ==9:\n",
+    "            print(i,j)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "558ca303",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i', 'a', 'h', 'o', 'l', 'l', 'e', 'h']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reverse a String\n",
+    "# Problem: Write a function that reverses a string. The input string is given as a list of characters.\n",
+    "\n",
+    "l = ['h', 'e', 'l', 'l', 'o', 'h', 'a', 'i']\n",
+    "for i in range(len(l)//2):\n",
+    "    l[i], l[-(i+1)] = l[-(i+1)], l[i]\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0b03fb78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'a', 'h', 'o', 'l', 'l', 'e', 'h']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = ['h', 'e', 'l', 'l', 'o', 'h', 'a', 'i']\n",
+    "r = []\n",
+    "for i in l:\n",
+    "    r=[i]+r\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "700d3206",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['o', 'l', 'l', 'e', 'h']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def reverse_string(s):\n",
     "    left, right = 0, len(s) - 1\n",
@@ -244,22 +312,29 @@
     "        s[left], s[right] = s[right], s[left]\n",
     "        left += 1\n",
     "        right -= 1\n",
-    "\n",
-    "# Example usage:\n",
+    "    return s\n",
     "s = ['h', 'e', 'l', 'l', 'o']\n",
-    "reverse_string(s)\n",
-    "print(s)  # Output: ['o', 'l', 'l', 'e', 'h']"
+    "reverse_string(s)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5c197126",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
-    "3. Maximum Subarray\n",
-    "Problem: Given an integer array nums, find the contiguous subarray (containing at least one number) which has the largest sum and return its sum.\n",
+    "# Maximum Subarray\n",
+    "# Problem: Given an integer array say nums, find the contiguous subarray (containing at least one number) \n",
+    "# which has the largest sum and return its sum.\n",
     "\n",
     "def max_subarray(nums):\n",
     "    current_sum = max_sum = nums[0]\n",
@@ -268,8 +343,61 @@
     "        max_sum = max(max_sum, current_sum)\n",
     "    return max_sum\n",
     "\n",
-    "# Example usage:\n",
-    "print(max_subarray([-2, 1, -3, 4, -1, 2, 1, -5, 4]))  # Output: 6\n"
+    "print(max_subarray([-2, -3,  -1,  -5, -6, -8]))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "96302014",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [-2, -3,  -1,  -5, -6, -8]\n",
+    "res = arr[0]\n",
+    "for i in range(len(arr)):\n",
+    "    sum_ = 0\n",
+    "    for j in range(i, len(arr)):\n",
+    "        sum_+= arr[j]\n",
+    "        res = max(res, sum_)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0492666a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [-2, -3,  -1,  -5, -6, -8]\n",
+    "res = 0\n",
+    "for i in range(len(arr)):\n",
+    "    for j in range(i, len(arr)):\n",
+    "        var = max(i, arr[i:i+1][0])\n",
+    "        if sum(arr[i:j+1])>res:                 \n",
+    "            res = max(sum(arr[i:j+1]), var)\n",
+    "print(res)"
    ]
   },
   {
@@ -279,7 +407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "4. Merge Two Sorted Lists\n",
+    "# Merge Two Sorted Lists\n",
     "Problem: Merge two sorted linked lists and return it as a new sorted list.\n",
     "\n",
     "class ListNode:\n",
