--- a/Programs - 2.ipynb
+++ b/Programs - 2.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "96302014",
    "metadata": {
     "scrolled": false
@@ -369,13 +369,14 @@
     "    sum_ = 0\n",
     "    for j in range(i, len(arr)):\n",
     "        sum_+= arr[j]\n",
-    "        res = max(res, sum_)\n",
+    "        if sum_ > res:\n",
+    "            res =  sum_\n",
     "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "0492666a",
    "metadata": {
     "scrolled": true
@@ -385,27 +386,131 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "-1 res\n"
      ]
     }
    ],
    "source": [
     "arr = [-2, -3,  -1,  -5, -6, -8]\n",
-    "res = 0\n",
+    "res = arr[0]\n",
     "for i in range(len(arr)):\n",
     "    for j in range(i, len(arr)):\n",
-    "        var = max(i, arr[i:i+1][0])\n",
-    "        if sum(arr[i:j+1])>res:                 \n",
-    "            res = max(sum(arr[i:j+1]), var)\n",
+    "        var = max(arr[i], sum(arr[i:j+1]))\n",
+    "        res = max(var, res)\n",
     "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c9739f58",
+   "execution_count": 58,
+   "id": "a82a08bc",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. Valid Parentheses\n",
+    "# Problem: Given a string containing just the characters '(', ')', '{', '}', '[', and ']',  \n",
+    "# determine if the input string is valid.\n",
+    "\n",
+    "def is_valid(s):\n",
+    "    stack = []\n",
+    "    mapping = {')': '(', '}': '{', ']': '['}\n",
+    "    for char in s:\n",
+    "        if char in mapping:\n",
+    "            top_element = stack.pop() if stack else '#'\n",
+    "            if mapping[char] != top_element:\n",
+    "                return False\n",
+    "        else:\n",
+    "            stack.append(char)\n",
+    "    return not stack\n",
+    "\n",
+    "print(is_valid(\"()\"))       \n",
+    "print(is_valid(\"()[]{}\"))   \n",
+    "print(is_valid(\"(]\"))       \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "ed320125",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# List Manipulation and Slicing: \n",
+    "# Write a function rotate_list(lst, k) that takes a list lst and an integer k and returns the list rotated to the \n",
+    "# right by k steps. For example, rotate_list([1, 2, 3, 4, 5], 2) should return [4, 5, 1, 2, 3].\n",
+    "\n",
+    "def rotate(l, k):\n",
+    "    k = k % len(l)\n",
+    "    return lst[-k:] + lst[:-k]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "8b9cf4cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[30, 40, 50, 10, 20]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rotate(l, k):\n",
+    "    l1 = l[k:]\n",
+    "    l1.extend(l[:k])\n",
+    "    return l1\n",
+    "rotate([10, 20, 30, 40, 50],2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "178d4a61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[30, 40, 50, 10, 20]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rotate(l, k):\n",
+    "    l1 = l[k:]\n",
+    "    for i in range(len(l[:k])):\n",
+    "        l1+= [l[i]]\n",
+    "    return l1\n",
+    "rotate([10, 20, 30, 40, 50],2)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "c17c6e39",
+   "metadata": {},
    "source": [
     "# Merge Two Sorted Lists\n",
     "Problem: Merge two sorted linked lists and return it as a new sorted list.\n",
@@ -432,63 +537,6 @@
     "# Example usage:\n",
     "# Input: 1->2->4, 1->3->4\n",
     "# Output: 1->1->2->3->4->4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a82a08bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "5. Valid Parentheses\n",
-    "Problem: Given a string containing just the characters '(', ')', '{', '}', '[', and ']', determine if the input string is valid.\n",
-    "\n",
-    "def is_valid(s):\n",
-    "    stack = []\n",
-    "    mapping = {')': '(', '}': '{', ']': '['}\n",
-    "    for char in s:\n",
-    "        if char in mapping:\n",
-    "            top_element = stack.pop() if stack else '#'\n",
-    "            if mapping[char] != top_element:\n",
-    "                return False\n",
-    "        else:\n",
-    "            stack.append(char)\n",
-    "    return not stack\n",
-    "\n",
-    "# Example usage:\n",
-    "print(is_valid(\"()\"))       # Output: True\n",
-    "print(is_valid(\"()[]{}\"))   # Output: True\n",
-    "print(is_valid(\"(]\"))       # Output: False\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed320125",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#### List Manipulation and Slicing: \n",
-    "Write a function rotate_list(lst, k) that takes a list lst and an integer k and returns the list rotated to the right by k steps. For example, rotate_list([1, 2, 3, 4, 5], 2) should return [4, 5, 1, 2, 3].\n",
-    "\n",
-    "def r(l,st,e):\n",
-    "    st=(st+2)%len(l)\n",
-    "    while s<e:       \n",
-    "        l[s],l[e]=l[e],l[s]\n",
-    "        \n",
-    "    print(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b9cf4cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l=[1, 2, 3, 4, 5]\n",
-    "r(l,2)"
    ]
   }
  ],
