--- a/Number Patterns.ipynb
+++ b/Number Patterns.ipynb
@@ -1032,15 +1032,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "69ac75f6",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
       "        3 \n",
       "    3   2   3 \n",
       "3   2   1   2   3 \n",
@@ -1058,12 +1064,11 @@
     "    dummy=n\n",
     "    for sp in range(1,spaces+1):\n",
     "        print(' ', end=' ')\n",
-    "    if row>n:\n",
-    "        cnt+=2\n",
-    "        row_int = row-cnt\n",
-    "    else:\n",
-    "        row_int=row\n",
-    "        \n",
+    "    # if row>n:\n",
+    "    #     cnt+=2\n",
+    "    #     row_int = row-cnt\n",
+    "    # else:\n",
+    "    #     row_int=row       \n",
     "    for st in range(1,stars+1):\n",
     "        if st%2==0:\n",
     "            print(' ', end=' ')\n",
@@ -1085,8 +1090,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5262b89d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    3 \n",
+      "  3 2 3 \n",
+      "3 2 1 2 3 \n",
+      "  3 2 3 \n",
+      "    3 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "stars = 1\n",
+    "spaces = n-1\n",
+    "var = 0\n",
+    "for i in range((2*n)-1):\n",
+    "    dummy = n\n",
+    "    for sp in range(spaces):\n",
+    "        print(' ', end = ' ')\n",
+    "    for st in range(stars):\n",
+    "        print(dummy, end = ' ')\n",
+    "        if st< var:\n",
+    "            dummy -= 1\n",
+    "        else:\n",
+    "            dummy +=1        \n",
+    "    if i<n-1:\n",
+    "        stars += 2\n",
+    "        spaces -= 1\n",
+    "        var+=1\n",
+    "    else:\n",
+    "        stars -= 2\n",
+    "        spaces += 1\n",
+    "        var-=1\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5fae88a6-254c-4fef-96c6-19e0a60656f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    1 \n",
+      "  1 2 1 \n",
+      "1 2 3 2 1 \n",
+      "  1 2 1 \n",
+      "    1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "stars = 1\n",
+    "spaces = n-1\n",
+    "for row in range(2*n-1):\n",
+    "    dummy = 1\n",
+    "    for sp in range(spaces):\n",
+    "        print(' ', end = ' ')\n",
+    "    for st in range(stars):\n",
+    "        print(dummy, end = ' ')\n",
+    "        if st < stars//2:\n",
+    "            dummy+=1\n",
+    "        else:\n",
+    "            dummy-=1\n",
+    "\n",
+    "    if row<n-1:\n",
+    "        stars +=2\n",
+    "        spaces-=1\n",
+    "    else:\n",
+    "        stars -=2\n",
+    "        spaces+=1\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6b182c19-4af6-4712-a960-bda130047b17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      1\n",
+      "     1 1\n",
+      "    1 2 1\n",
+      "   1 3 3 1\n",
+      "  1 4 6 4 1\n",
+      " 1 5 10 10 5 1\n",
+      "1 6 15 20 15 6 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_pascals_triangle(n):\n",
+    "    triangle = []\n",
+    "    for i in range(n):\n",
+    "        row = [1] * (i + 1)\n",
+    "        for j in range(1, i):\n",
+    "            row[j] = triangle[i - 1][j - 1] + triangle[i - 1][j]\n",
+    "        triangle.append(row)\n",
+    "    for row in triangle:\n",
+    "        print(\" \" * (n - len(row)), end=\"\")  \n",
+    "        print(\" \".join(map(str, row)))\n",
+    "\n",
+    "n = 7  \n",
+    "generate_pascals_triangle(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "58e711fd-66ad-4d7b-ab31-877c761fbc93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              1 \n",
+      "            1   1 \n",
+      "          1   2   1 \n",
+      "        1   3   3   1 \n",
+      "      1   4   6   4   1 \n",
+      "    1   5   10   10   5   1 \n",
+      "  1   6   15   20   15   6   1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "l = []\n",
+    "n = int(input())\n",
+    "spaces = n-1\n",
+    "for i in range(n):\n",
+    "    for sp in range(spaces):\n",
+    "        print(' ', end = ' ')\n",
+    "    spaces-=1\n",
+    "    row = [1]*(i+1)\n",
+    "    temp = row\n",
+    "    if i>1:\n",
+    "        print(' ',1, end = ' ')\n",
+    "        for j in range(1,len(temp)):\n",
+    "            try:\n",
+    "                temp[j] = l[i-1][j]+l[i-1][j-1]\n",
+    "                print(' ', temp[j], end = ' ')\n",
+    "            except:\n",
+    "                pass\n",
+    "        print(' ', 1, end = ' ')\n",
+    "    else:\n",
+    "        for i in range(len(temp)):\n",
+    "            print(' ', temp[i], end = ' ')\n",
+    "    print()\n",
+    "    l.append(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a898ab2-57e0-431e-8ab4-e40021ccc44a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1108,7 +1302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
