--- a/Number Patterns.ipynb
+++ b/Number Patterns.ipynb
@@ -1279,8 +1279,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6a898ab2-57e0-431e-8ab4-e40021ccc44a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          1   1 \n",
+      "        1   1 \n",
+      "      1   2   1 \n",
+      "    1   3   3   1 \n",
+      "  1   4   6   4   1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "l = []\n",
+    "n = int(input())\n",
+    "spaces = n-1\n",
+    "for i in range(n):\n",
+    "    for sp in range(spaces):\n",
+    "        print(' ', end = ' ')\n",
+    "    spaces-=1\n",
+    "    row = [1]*(i+1)\n",
+    "    temp = row\n",
+    "    print(' ',1, end = ' ')\n",
+    "    for j in range(1,len(temp)):\n",
+    "        try:\n",
+    "            temp[j] = l[i-1][j]+l[i-1][j-1]\n",
+    "            print(' ', temp[j], end = ' ')\n",
+    "        except:\n",
+    "            pass\n",
+    "    print(' ', 1, end = ' ')\n",
+    "    \n",
+    "    print()\n",
+    "    l.append(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb35b126-29a7-41b7-9207-4245aeca404c",
    "metadata": {},
    "outputs": [],
    "source": []
